# pa-speakers

./: .env.example  .gitignore  BACKLOG.md  FEATURES.md  Makefile  README.md  config.ci-smoke.yaml  config.yaml
.github/workflows/: bootstrap.yml  ci.yml  deploy.yml
frontend/: config.js  index.html  login.html
infra/: provision.sh
infra/launchd/: watcher.template.plist
infra/lib/: hash_password.py
scraper/: pyproject.toml
scraper/scraper/: classify.py  main.py  normalize.py  pairs.py  pipeline.py  price_history.py  rcf_config.py  schema_utils.py  search_terms.py  source_cadence.py  thomann_new_price.py  trigger_watcher.py
scraper/scraper/sources/: blocket.py  dba.py  ebay.py  gearloop.py  kleinanzeigen.py  reverb.py  thomann.py
scraper/tests/: test_pipeline_last_seen.py  test_studio_subs.py
worker/: wrangler.toml
worker/migrations/: 0001_init.sql
worker/src/: auth.ts  index.ts  middleware.ts
