[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pa-speakers-scraper"
version = "0.1.0"
description = "Monitors used RCF ART / Yamaha DXR PA speaker listings across Reverb, Thomann, Kleinanzeigen, Blocket, and DBA. Migrated from the standalone PA SPEAKERS project onto scraper-boilerplate."
requires-python = ">=3.11"
dependencies = [
    "scraper-core>=0.1.0",
    "requests>=2.31",
    # F14 (2026-07-22): Reverb begyndte at afvise almindelig `requests`-trafik
    # med 403 -- bekræftet TLS/klient-fingerprint-baseret (identiske headers
    # giver 200 via curl, 403 via requests), ikke noget der kan rettes med
    # header-ændringer. curl_cffi efterligner en rigtig browsers TLS-håndtryk
    # og løser det. Se sources/reverb.py.
    "curl_cffi>=0.7",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "pyyaml>=6.0",
]

[project.scripts]
scraper-run = "scraper.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["scraper*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
